feat: override new tab page

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
   "manifest_version": 3,
   "name": "orenote",
   "version": "0.0.1",
-  "action": { "default_popup": "index.html" }
+  "chrome_url_overrides": { "newtab": "index.html" }
 }
