feat: save text

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
   "manifest_version": 3,
   "name": "orenote",
   "version": "0.0.1",
-  "chrome_url_overrides": { "newtab": "index.html" }
+  "chrome_url_overrides": { "newtab": "index.html" },
+  "permissions": [
+    "storage"
+  ]
 }
