style: 未使用変数をエラーにする

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["chrome"]
+    "types": ["chrome"],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
