--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "orenote",
-  "version": "0.0.1",
+  "name": "ORENOTE",
+  "version": "0.0.2",
   "chrome_url_overrides": { "newtab": "index.html" },
   "permissions": [
     "storage"
