--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@tiptap/core": "^2.0.0-beta.182",
+    "@tiptap/extension-link": "^2.0.0-beta.43",
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.191",
     "immer": "^9.0.15",
