--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     "lint:fix": "npm run lint -- --fix && prettier --write src/"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.1",
-    "@tiptap/core": "^2.0.0-beta.182",
-    "@tiptap/extension-link": "^2.0.0-beta.43",
-    "@tiptap/react": "^2.0.0-beta.114",
-    "@tiptap/starter-kit": "^2.0.0-beta.191",
-    "immer": "^9.0.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recoil": "^0.7.4"
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@tiptap/core": "^2.8.0",
+    "@tiptap/extension-link": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
+    "immer": "^10.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.12",
-    "@types/chrome": "^0.0.193",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@crxjs/vite-plugin": "^1.0.14",
+    "@types/chrome": "^0.0.277",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-react": "^2.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -40,8 +40,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "prettier": "^3.3.3",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
